--- a/01swagger/pom.xml
+++ b/01swagger/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>1.9.6</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
