--- a/00test/src/main/resources/application.properties
+++ b/00test/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+log4j.logger.httpclient.wire=fatal
+log4j.logger.org.apache.commons=fatal
+log4j.logger.com.gargoylesoftware.htmlunit=fatal
+log4j.logger.com.gargoylesoftware.htmlunit.WebTestCase=fatal
+log4j.logger.com.gargoylesoftware.htmlunit.javascript.DebugFrameImpl=fatal
