--- a/04小说和漫画/BiQuKanCOM/pom.xml
+++ b/04小说和漫画/BiQuKanCOM/pom.xml
@@ -2,8 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <groupId>BiQuGeCOM</groupId>
+    <groupId>BiQuKanCOM</groupId>
     <version>1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <build>
@@ -19,7 +18,8 @@
         </plugins>
     </build>
 
-    <artifactId>BiQuGeCOM</artifactId>
+    <artifactId>BiQuKanCOM</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
@@ -41,6 +41,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
 
 </project>
