--- a/06数据访问/data-02-mybatis/src/main/resources/application.yml
+++ b/06数据访问/data-02-mybatis/src/main/resources/application.yml
@@ -4,72 +4,80 @@ spring:
     password: root
     url: jdbc:mysql://127.0.0.1:3306/mybatis
     driver-class-name: com.mysql.cj.jdbc.Driver
-    #    # \u5EFA\u8868sql
+    #    # 建表sql
     #    schema:
     #      - classpath:schema-test.sql
-    #    # \u63D2\u5165\u6570\u636Esql
+    #    # 插入数据sql
     #    data:
     #      - classpath:data-test.sql
-    #    # \u521D\u59CB\u5316\u6A21\u5F0F
+    #    # 初始化模式
     #    initialization-mode: always
-    ###################\u4EE5\u4E0B\u4E3Adruid\u589E\u52A0\u7684\u914D\u7F6E###########################
-    # \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
+    ###################以下为druid增加的配置###########################
+    # 下面为连接池的补充设置，应用到上面所有数据源中
     druid:
       #      driver-class-name: com.mysql.cj.jdbc.Driver
-      # \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
+      # 初始化大小，最小，最大
       initialSize: 5
       minIdle: 5
       maxActive: 20
-      # \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
+      # 配置获取连接等待超时的时间
       maxWait: 60000
-      # \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       timeBetweenEvictionRunsMillis: 2000
-      # \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u548C\u6700\u5927\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+      # 配置一个连接在池中最小和最大生存的时间，单位是毫秒
       minEvictableIdleTimeMillis: 600000
       maxEvictableIdleTimeMillis: 900000
       validationQuery: select 1
       testWhileIdle: true
       testOnBorrow: false
       testOnReturn: false
-      # \u6253\u5F00PSCache\uFF0C\u5E76\u4E14\u6307\u5B9A\u6BCF\u4E2A\u8FDE\u63A5\u4E0APSCache\u7684\u5927\u5C0F
+      # 打开PSCache，并且指定每个连接上PSCache的大小
       poolPreparedStatements: true
       maxPoolPreparedStatementPerConnectionSize: 20
-      # \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899\uFF0C\u6B64\u5904\u662Ffilter\u4FEE\u6539\u7684\u5730\u65B9,\u53BB\u9664log4j
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙，此处是filter修改的地方,去除log4j
       filters: stat,wall,slf4j
-      # \u5408\u5E76\u591A\u4E2ADruidDataSource\u7684\u76D1\u63A7\u6570\u636E
+      # 合并多个DruidDataSource的监控数据
       useGlobalDataSourceStat: true
-      # \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
+      # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-      ###############################\u76D1\u63A7\u914D\u7F6E###############################
-      # StatViewServlet\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_StatViewServlet\u914D\u7F6E
+      ###############################监控配置###############################
+      # StatViewServlet配置，说明请参考Druid Wiki，配置_StatViewServlet配置
       stat-view-servlet:
-        enabled: true #\u662F\u5426\u542F\u7528StatViewServlet\uFF08\u76D1\u63A7\u9875\u9762\uFF09\u9ED8\u8BA4\u503C\u4E3Afalse\uFF08\u8003\u8651\u5230\u5B89\u5168\u95EE\u9898\u9ED8\u8BA4\u5E76\u672A\u542F\u52A8\uFF0C\u5982\u9700\u542F\u7528\u5EFA\u8BAE\u8BBE\u7F6E\u5BC6\u7801\u6216\u767D\u540D\u5355\u4EE5\u4FDD\u969C\u5B89\u5168\uFF09
+        enabled: true #是否启用StatViewServlet（监控页面）默认值为false（考虑到安全问题默认并未启动，如需启用建议设置密码或白名单以保障安全）
         url-pattern: /druid/*
-        # \u5141\u8BB8\u6E05\u7A7A\u7EDF\u8BA1\u6570\u636E
+        # 允许清空统计数据
         reset-enable: true
-        # \u7528\u6237\u540D\u548C\u5BC6\u7801
+        # 用户名和密码
         login-username: root
         login-password: root
-        # ip\u767D\u540D\u5355,\u5982\u679Callow\u6CA1\u6709\u914D\u7F6E\u6216\u8005\u4E3A\u7A7A\uFF0C\u5219\u5141\u8BB8\u6240\u6709\u8BBF\u95EE
+        # ip白名单,如果allow没有配置或者为空，则允许所有访问
         allow:
-        # ip\u9ED1\u540D\u5355,deny\u4F18\u5148\u4E8Eallow\uFF0C\u5982\u679C\u5728deny\u5217\u8868\u4E2D\uFF0C\u5C31\u7B97\u5728allow\u5217\u8868\u4E2D\uFF0C\u4E5F\u4F1A\u88AB\u62D2\u7EDD\u3002
+        # ip黑名单,deny优先于allow，如果在deny列表中，就算在allow列表中，也会被拒绝。
         deny: # 192.168.1.255/24
-      # WebStatFilter\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_\u914D\u7F6EWebStatFilter
+      # WebStatFilter配置，说明请参考Druid Wiki，配置_配置WebStatFilter
       web-stat-filter:
-        enabled: true #\u662F\u5426\u542F\u7528StatFilter\u9ED8\u8BA4\u503Cfalse
+        enabled: true #是否启用StatFilter默认值false
         url-pattern: /*
-        # \u6392\u9664\u4E00\u4E9B\u4E0D\u5FC5\u8981\u7684url\uFF0C\u6BD4\u5982*.js,/jslib/*\u7B49\u7B49
+        # 排除一些不必要的url，比如*.js,/jslib/*等等
         exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"
-        # session\u7EDF\u8BA1\u529F\u80FD, false\uFF1A\u5F00\u542F, true\uFF1A\u5173\u95ED
+        # session统计功能, false：开启, true：关闭
         session-stat-enable: false
-        # \u7F3A\u7701sessionStatMaxCount\u662F1000\u4E2A\u3002\u4F60\u53EF\u4EE5\u6309\u9700\u8981\u8FDB\u884C\u914D\u7F6E
+        # 缺省sessionStatMaxCount是1000个。你可以按需要进行配置
         session-stat-max-count: 1000
-        # \u53EF\u4EE5\u914D\u7F6EprincipalSessionName\uFF0C\u4F7F\u5F97druid\u80FD\u591F\u77E5\u9053\u5F53\u524D\u7684session\u7684\u7528\u6237\u662F\u8C01
+        # 可以配置principalSessionName，使得druid能够知道当前的session的用户是谁
         #principal-session-name: xxx.user
-        # \u5982\u679C\u4F60\u7684user\u4FE1\u606F\u4FDD\u5B58\u5728cookie\u4E2D\uFF0C\u4F60\u53EF\u4EE5\u914D\u7F6EprincipalCookieName\uFF0C\u4F7F\u5F97druid\u77E5\u9053\u5F53\u524D\u7684user\u662F\u8C01
+        # 如果你的user信息保存在cookie中，你可以配置principalCookieName，使得druid知道当前的user是谁
         #principal-cookie-name: xxx.user
-        # \u914D\u7F6EprofileEnable\u80FD\u591F\u76D1\u63A7\u5355\u4E2Aurl\u8C03\u7528\u7684sql\u5217\u8868
+        # 配置profileEnable能够监控单个url调用的sql列表
         profile-enable: true
-      # Spring\u76D1\u63A7\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Github Wiki\uFF0C\u914D\u7F6E_Druid\u548CSpring\u5173\u8054\u76D1\u63A7\u914D\u7F6E
-      # Spring\u76D1\u63A7AOP\u5207\u5165\u70B9\uFF0C\u5982x.y.z.service.*,\u914D\u7F6E\u591A\u4E2A\u82F1\u6587\u9017\u53F7\u5206\u9694
+      # Spring监控配置，说明请参考Druid Github Wiki，配置_Druid和Spring关联监控配置
+      # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
       #aop-patterns: com.synqnc.service.*.impl.*.(..),com.synqnc.dao.*.*.(..)
+
+# mybatis 配置
+mybatis:
+  mapper-locations: classpath:mapper/*-mapper.xml
+  type-aliases-package: top.niandui.model
+  configuration:
+    # 开启 将下划线映射到驼峰大小写
+    map-underscore-to-camel-case: true
