--- a/06数据访问/data-03-jpa/src/main/resources/application.yml
+++ b/06数据访问/data-03-jpa/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/jpa
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  # springboot data jpa \u914D\u7F6E
+  jpa:
+    hibernate:
+      # \u5F53\u8868\u4E0D\u5B58\u5728\u4F3C\u7684\u66F4\u65B0\u7B56\u7565
+      ddl-auto: update
+    # \u5C06\u6267\u884C\u7684SQL\u663E\u793A\u5728\u63A7\u5236\u53F0
+    show-sql: true
