--- a/08IDEA插件/test01/resources/META-INF/plugin.xml
+++ b/08IDEA插件/test01/resources/META-INF/plugin.xml
@@ -28,6 +28,14 @@
 
   <actions>
     <!-- Add your actions here -->
+    <!--<group id="MyGroup" text="MyGroup Text" description="MyGroup Description" popup="true">
+      <action id="MyAnAction" class="MyAnAction" text="MyAnAction Name" description="MyAnAction description">
+      </action>
+      <add-to-group group-id="ToolsMenu" anchor="last"/>
+    </group>-->
+    <action id="MyAnAction" class="MyAnAction" text="MyAnAction Name" description="MyAnAction description">
+      <add-to-group group-id="ToolsMenu" anchor="last"/>
+    </action>
   </actions>
 
 </idea-plugin>
