--- a/00test/pom.xml
+++ b/00test/pom.xml
@@ -177,6 +177,13 @@
             <version>1.6.1</version>
         </dependency>
 
+        <!-- ftp -->
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.6</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
