--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>03TwoToOne</module>
+        <module>11jdk14/jdk14-test-01</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
