--- a/04小说和漫画/fictionweb/pom.xml
+++ b/04小说和漫画/fictionweb/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>htmlunit</artifactId>
             <version>2.38.0</version>
         </dependency>
+        <!-- easyexcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.6</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
