--- a/04小说和漫画/fictionweb/src/main/resources/application.yml
+++ b/04小说和漫画/fictionweb/src/main/resources/application.yml
@@ -22,19 +22,19 @@ mybatis:
     # 开启 将下划线映射到驼峰大小写
     map-underscore-to-camel-case: true
 
-#pageHelper配置
+# pageHelper配置
 pagehelper:
   params: count=countSql
   helper-dialect: postgresql #指定分页插件使用哪种方言
   reasonable: 'true' #分页合理化参数 pageNum<=0时会查询第一页 pageNum>pages(超过总数时) 会查询最后一页
   support-methods-arguments: 'true'
 
-#配置信息
+# 配置信息
 config-info:
   layui-version: 2.5.6
   jquery-version: 3.5.1
 
-#spring配置
+# spring配置
 spring:
   servlet:
     multipart:
@@ -42,6 +42,24 @@ spring:
       maxFileSize: 100MB
       # 单次所有文件上传最大值
       maxRequestSize: 10000MB
+
+  # 运行环境
+  profiles:
+    active: dev
+
+  # Redis配置
+  redis:
+    database: 0
+    host: 127.0.0.1
+    lettuce:
+      pool:
+        max-active: 20   #最大连接数据库连接数（使用负值表示没有限制）
+        max-idle: 3     #最大空闲连接,设 0 为没有限制
+        min-idle: 1     #最小空闲连接,设 0 为没有限制
+        max-wait: 10000  #连接池最大阻塞等待时间（使用负值表示没有限制）
+      shutdown-timeout: 10s
+    password: ''
+    port: 6379
 
   # jackson配置
   jackson:
