--- a/04小说和漫画/fictionweb/src/main/resources/application.yml
+++ b/04小说和漫画/fictionweb/src/main/resources/application.yml
@@ -33,8 +33,8 @@ pagehelper:
 config-info:
   layui-version: 2.5.6
   jquery-version: 3.5.1
-  win-file-path: D:/
-  linux-file-path: /data/
+  win-file-path: "D:"
+  linux-file-path: /data
 
 # spring配置
 spring:
