--- a/04小说和漫画/fictionweb/pom.xml
+++ b/04小说和漫画/fictionweb/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
+        <version>2.3.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>top.niandui</groupId>
@@ -51,13 +51,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-            <scope>compile</scope>
+            <!--<scope>compile</scope>
             <exclusions>
                 <exclusion>
                     <artifactId>tomcat-embed-el</artifactId>
                     <groupId>org.apache.tomcat.embed</groupId>
                 </exclusion>
-            </exclusions>
+            </exclusions>-->
         </dependency>
         <!-- thymeleaf -->
         <dependency>
@@ -113,12 +113,12 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.3</version>
+            <version>2.1.4</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.2.1</version>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.8</version>
         </dependency>
         <!-- 分页插件 -->
         <dependency>
@@ -157,13 +157,13 @@
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit</artifactId>
-            <version>2.44.0</version>
+            <version>2.45.0</version>
         </dependency>
         <!-- easyexcel -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>2.2.6</version>
+            <version>2.2.7</version>
         </dependency>
         <!-- sshj -->
         <dependency>
