添加缺少配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
 spring:
   # 运行环境
   profiles:
-    include: server,knife4j,mybatis,redis,datasource
+    include: server,knife4j,mybatis,redis,datasource,info
