--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
         <!-- webjars -->
         <dependency>
             <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>0.40</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>3.5.1</version>
         </dependency>
@@ -157,6 +162,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>layui</artifactId>
             <version>2.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>vue</artifactId>
+            <version>2.6.12</version>
         </dependency>
         <!-- htmlunit -->
         <dependency>
