--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
             <artifactId>jsencrypt</artifactId>
             <version>3.0.0-rc.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>js-cookie</artifactId>
+            <version>3.0.0-rc.1</version>
+        </dependency>
         <!-- htmlunit -->
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
