--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,12 @@
             <artifactId>sshj</artifactId>
             <version>0.31.0</version>
         </dependency>
+        <!-- jsch:另一种ssh实现方式 -->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
