--- a/src/main/resources/config/application-redis.yml
+++ b/src/main/resources/config/application-redis.yml
@@ -1,14 +1,15 @@
 spring:
-  # Redis配置
-  redis:
-    database: 0
-    host: 127.0.0.1
-    lettuce:
-      pool:
-        max-active: 20   #最大连接数据库连接数（使用负值表示没有限制）
-        max-idle: 3     #最大空闲连接,设 0 为没有限制
-        min-idle: 1     #最小空闲连接,设 0 为没有限制
-        max-wait: 10000  #连接池最大阻塞等待时间（使用负值表示没有限制）
-      shutdown-timeout: 10s
-    password: ''
-    port: 6379
+  data:
+    # Redis配置
+    redis:
+      database: 0
+      host: 127.0.0.1
+      lettuce:
+        pool:
+          max-active: 20   #最大连接数据库连接数（使用负值表示没有限制）
+          max-idle: 3     #最大空闲连接,设 0 为没有限制
+          min-idle: 1     #最小空闲连接,设 0 为没有限制
+          max-wait: 10000  #连接池最大阻塞等待时间（使用负值表示没有限制）
+        shutdown-timeout: 10s
+      password: ''
+      port: 6379
